<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@color/main_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/linear_title_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:src="@drawable/logo50"
            />
        <TextView
            android:id="@+id/txt_title_animation"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/welcom_in_hyperone"
            android:textSize="50sp"
            android:layout_gravity="bottom"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:gravity="center_horizontal"
            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:src="@drawable/logo50"
           />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_before_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/third_white"
        android:layout_marginTop="3dp"
        >
       <ImageView
            android:id="@+id/img_before_work"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_80"/>
     </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_for_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        <EditText
            android:id="@+id/et_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:textColor="@color/third_white"
            android:textDirection="rtl"
            android:backgroundTint="@color/third_white"
            android:hint="@string/enterbranch"
            android:textColorHint="@color/third_white"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            />
        <Button
            android:id="@+id/btn_ipaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/third_white"
            android:textDirection="rtl"
            android:maxLength="20"
            android:text="@string/enterbranch"
            android:textSize="50sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/discount_icon_color"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

    <EditText
        android:id="@+id/et_text"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:textColor="@color/third_white"
        android:textDirection="rtl"
        android:backgroundTint="@color/third_white"
        android:maxLength="20"
        android:hint="@string/enterbarcode"
        android:textColorHint="@color/third_white"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />
        <TextView
            android:id="@+id/txt_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="نقاط العميل"
            android:textSize="@dimen/font_size_for_large_text_of_app"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="description"
        android:textSize="@dimen/font_size_for_large_text_of_app"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="price"
        android:textSize="@dimen/font_size_for_large_text_of_app"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/linear_for_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        android:gravity="center_horizontal"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/shape_seven_star"
                    android:tint="@color/discount_icon_color"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_special_discount"
                   android:textColor="@android:color/white"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/font_size_for_text_of_app"
                    android:rotation="-45"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_instanse_of"
                    android:textSize="@dimen/font_size_for_text_of_app"
                    android:textColor="@android:color/holo_red_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="-25dp"/>
            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/close"
                    android:tint="@android:color/holo_red_light"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:id="@+id/txt_price_before_discount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_special_discount"
                    android:textColor="@android:color/white"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/font_size_for_text_of_app"
                    android:gravity="center"
                    />
            </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offer_from"
                        android:textSize="@dimen/font_size_for_text_of_offer_date"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/txt_offer_from_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offer_from"
                        android:textSize="@dimen/font_size_for_text_of_offer_date"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offer_to"
                        android:textSize="@dimen/font_size_for_text_of_offer_date"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/txt_offer_to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offer_to"
                        android:textSize="@dimen/font_size_for_text_of_offer_date"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remind"
                        android:textSize="@dimen/font_size_for_text_of_offer_date"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/txt_offer_how_much_day_remind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_much_day_remind"
                        android:textSize="@dimen/font_size_for_text_of_offer_date"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>